[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/eagle/eagle-attack-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/eagle/eagle-attack-2.png" type="Texture" id=2]
[ext_resource path="res://Assets/eagle/eagle-attack-3.png" type="Texture" id=3]
[ext_resource path="res://Assets/eagle/eagle-attack-4.png" type="Texture" id=4]
[ext_resource path="res://scripts/Enemies/FlyingEnemy.gd" type="Script" id=5]
[ext_resource path="res://Assets/eagle/enemy-death-3.png" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -23, 0, 0, 0, 0, 0, 28 )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "Hurt",
"speed": 1.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 14 )

[sub_resource type="Animation" id=4]
resource_name = "Flying"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.99 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="FlyingEnemy" type="Path2D" groups=["Enemy"]]
scale = Vector2( 2, 2 )
curve = SubResource( 1 )
script = ExtResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2( 0, 28 )
offset = 51.0016
rotate = false
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="PathFollow2D" groups=["Enemy"]]

[node name="AnimatedSprite" type="AnimatedSprite" parent="PathFollow2D/Area2D"]
frames = SubResource( 2 )
animation = "Hurt"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Area2D"]
position = Vector2( -3, 3 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PathFollow2D"]
autoplay = "Flying"
playback_process_mode = 0
anims/Flying = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Stagger" type="Timer" parent="."]

[node name="FeatherCooldown" type="Timer" parent="."]

[connection signal="area_entered" from="PathFollow2D/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="PathFollow2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Stagger" to="." method="_on_Stagger_timeout"]
[connection signal="timeout" from="FeatherCooldown" to="." method="_on_FeatherCooldown_timeout"]
